--- a/task-1.html
+++ b/task-1.html
@@ -8,5 +8,137 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-
+<body style="width: 100%; margin: 0; padding: 0; background-color: #ef8685;">
+    <div class="container-fluid d-flex justify-content-between py-2 px-5" >
+        <p class="text-light"><b>Bootstrap</b></p>
+        <ul class="nav justify-content-end">
+            <li class="nav-item" >
+              <a class="nav-link" aria-current="page" href="#" style="color: rgba(250, 250, 250, 0.623);"><b>Home</b></a>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link" aria-current="page" href="#" style="color: rgba(250, 250, 250, 0.623);"><b>Photos</b></a>
+              </li>
+              <li class="nav-item" >
+                <a class="nav-link" aria-current="page" href="#" style="color: rgba(250, 250, 250, 0.623);"><b>Gallery</b></a>
+              </li>
+              <li class="nav-item" >
+                <a class="nav-link" aria-current="page" href="#" style="color: rgba(250, 250, 250, 0.623);"><b>Contact us</b></a>
+              </li>
+              <li class="nav-item" >
+                <a class="nav-link" aria-current="page" href="#" style="color: rgba(250, 250, 250, 0.623); background-color: #606b7c;"><b>Free Download</b></a>
+              </li>
+          </ul>
+    </div>
+    <div class="container-fluid py-2 px-5 text-light">
+        <p style="font-size: 40px;"><b>Bootstrap Slider Example</b></p>
+        <div class="container-fluid d-flex">
+            <button type="button" style="background-color: #149dcc; border: none; padding: 2px 15px; margin: 2px; margin-left: -11px; color: white;">Free Download</button>
+            <button type="button" style="background-color: transparent; border: 2px solid white; padding: 2px 15px; margin:2px;color:  white;">Live Demo</button>
+        </div>
+    </div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" >
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner" >
+          <div class="carousel-item active">
+            <img src="./img1.jpg" class="d-block w-100" alt="..." style="height: 650px;">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./img2.jpg" class="d-block w-100" alt="..." style="height: 650px;">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./img3.jpg" class="d-block w-100" alt="..." style="height: 650px;">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="container-fluid d-flex justify-content-center mt-3 text-light">
+        <i class="fa fa-music" style="margin-top: 15px ;"></i>
+        <p style="margin: 7px; font-size: 20px; "><b>MUSIC</b></p>
+        <i class="fa fa-music" style="margin-top: 15px ;"></i>
+      </div>
+     <div class="container-fluid d-flex justify-content-around mt-5" style="margin-bottom: 20px;" >
+        <div class="card" style="width:32%;">
+            <img src="img1.jpg" alt="..." height="285px">
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum ...</p>
+            </div>
+          </div>
+          <div class="card" style="width:32%;">
+            <img src="img2.jpg" alt="...">
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum ...</p>
+            </div>
+          </div>
+          <div class="card" style="width:32%;">
+            <img src="img3.jpg" alt="...">
+            <div class="card-body">
+              <p class="card-text">Lorem ipsum ...</p>
+            </div>
+          </div>
+     </div>
+  <div class="container-fluid d-flex justify-content-center" style="background-color: #3a3a3a; color: rgba(250, 250, 250, 0.623); padding: 20px; font-size: 16px;">
+    <div>
+        <p style="font-size: 25px;">Links</p>
+        <div class="container-fluid d-flex ">
+            <p class="m-1">Home</p>
+            <p class="m-1">Home</p>
+        </div>
+        <div class="container-fluid d-flex ">
+            <p class="m-1">Home</p>
+            <p class="m-1">contact us</p>
+        </div>
+        <div class="container-fluid d-flex ">
+            <p class="m-1">Home</p>
+            <p class="m-1">About us</p>
+        </div>
+        <div class="container-fluid d-flex ">
+            <p class="m-1">Home</p>
+            <p class="m-1">Free Downloads</p>
+        </div>
+    </div>
+    <div class="mx-5">
+        <p style="font-size: 25px;">Connect With us</p>
+        <p>we knows you have at least one special profile...we <br/>would love to hear from you</p>
+    </div>
+    <div>
+        <p style="font-size: 25px;">Subscribe</p>
+        <span>Subscribe to our newsletter to get latest news!</span>
+        <div class="input-group mt-3">
+            <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+            <input type="text" class="form-control" placeholder="Enter your email" aria-label="Amount (to the nearest dollar)">
+            <span class="input-group-text">Subscribe</span>
+          </div>
+          
+    </div>
+  </div>
+  <div class="container-fluid d-flex  justify-content-center" style="background-color: #303030; color: rgba(250, 250, 250, 0.623); padding: 20px; font-size: 16px; padding-top: 10px; height: 50px;">
+    <p style="margin-left: 10px;">Read a blog |</p>
+    <p style="margin-left: 10px;">Submit |</p>
+    <p style="margin-left: 10px;">Link | </p>
+  </div>
+  
+</body>
 </html>
